[project]
name = "Strawberry-FastAPI-Postgres-Templating"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hari Srinivasan", email = "harisrini21@gmail.com"},
]
dependencies = ["strawberry-graphql>=0.247.1", "fastapi>=0.115.4", "uvicorn>=0.32.0", "sqlalchemy>=2.0.36", "strawberry-sqlalchemy-mapper>=0.4.5", "alembic>=1.13.3", "psycopg2-binary>=2.9.10", "ruff>=0.7.2", "python-dotenv>=1.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
